--- a/sass/portfolio.scss
+++ b/sass/portfolio.scss
@@ -12,16 +12,9 @@
 @import './components/list/social-list';
 @import './components/form/newsletter';
 @import './components/common/btn';
-@import './components/list/feature-list';
-@import './components/list/card-list';
-@import './components/modal/backdrop-modal';
-@import './components/form/order';
-@import './components/form/agreement';
+@import './components/list/filtr-list';
+@import './components/list/project-list';
 
 @import './layout/header';
 @import './layout/footer';
-@import './layout/hero';
-@import './layout/advantage';
-@import './layout/gallery';
-@import './layout/team';
-@import './layout/client';
+@import './layout/portfolio';
