--- a/sass/components/block/_container.scss
+++ b/sass/components/block/_container.scss
@@ -4,5 +4,5 @@
   padding-right: 15px;
   margin-left: auto;
   margin-right: auto;
-  outline: 1px solid tomato;
+  /*outline: 1px solid tomato;*/
 }
