--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -27,7 +27,7 @@
   margin-bottom: 20px;
 }
 
-.footer__social-link {
+.footer .social-list__link {
   color: inherit;
   background-color: rgba(255, 255, 255, 0.1);
   transition: background-color 250ms $primary-cubic-bezier;
