--- a/sass/utils/_placeholder.scss
+++ b/sass/utils/_placeholder.scss
@@ -1,23 +1,3 @@
-/* визуальное скрытие блока */
-%visually-hidden {
-  position: absolute;
-  white-space: nowrap;
-  width: 1px;
-  height: 1px;
-  overflow: hidden;
-  border: 0;
-  padding: 0;
-  clip: rect(0 0 0 0);
-  clip-path: inset(50%);
-  margin: -1px;
-}
-
-/* общие падинги для секций */
-%section {
-  padding-top: 94px;
-  padding-bottom: 94px;
-}
-
 /* общие свойства списков */
 %list {
   list-style: none;
@@ -29,7 +9,7 @@
 }
 
 /* Общие свойства изображений */
-%item-img {
+%img {
   display: block;
   max-width: 100%;
   height: auto;
@@ -41,6 +21,13 @@
   line-height: 1.14;
   letter-spacing: 0.03em;
   text-transform: uppercase;
+}
+
+/* Общий шрифт title */
+%font-title {
+  font-size: 36px;
+  line-height: 1.17;
+  text-align: center;
 }
 
 /* общие свойства списков в шапке */
@@ -56,4 +43,9 @@
   display: block;
   padding-top: 32px;
   padding-bottom: 32px;
+}
+
+/* общие свойства заголовков h2, h3 */
+%title {
+  color: $title-text-color;
 }
