--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -8,7 +8,7 @@
 
   background-color: $hero-bg-color;
   background-image: linear-gradient($hero-overlay-color, $hero-overlay-color),
-    url(../../images/hero.jpg);
+    url(../images/hero.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
