--- a/sass/components/list/_project-list.scss
+++ b/sass/components/list/_project-list.scss
@@ -39,7 +39,7 @@
   justify-content: center;
   align-items: center;
   width: 100%;
-  height: 100%;
+  height: calc(100% + 1px);
   padding: 24px;
   font-size: 18px;
   line-height: 1.56;
