--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /* общие свойства списков */
-.navigation__list, .address__list, .social-list, .filtr-list, .project-list, .header__list {
+.navigation__list, .address__list, .social-list, .project-list, .header__list, .portfolio__filtr {
   list-style: none;
 }
 
@@ -24,13 +24,6 @@
   text-transform: uppercase;
 }
 
-/* Общий шрифт title */
-.portfolio__title {
-  font-size: 36px;
-  line-height: 1.17;
-  text-align: center;
-}
-
 /* общие свойства списков в шапке */
 .navigation__list, .header__list {
   display: flex;
@@ -44,11 +37,6 @@
   display: block;
   padding-top: 32px;
   padding-bottom: 32px;
-}
-
-/* общие свойства заголовков h2, h3 */
-.project-list__title, .portfolio__title {
-  color: #212121;
 }
 
 /* сброс марджинов и паддингов */
@@ -145,6 +133,14 @@ body {
   height: 4px;
   border-radius: 2px;
   background-color: #2196f3;
+}
+
+/*h2 title */
+.title {
+  font-size: 36px;
+  line-height: 1.17;
+  text-align: center;
+  color: #212121;
 }
 
 /* контакты в footer */
@@ -259,47 +255,6 @@ body {
   background-color: #188ce8;
 }
 
-/* фильтр */
-.filtr-list {
-  display: flex;
-  justify-content: center;
-  margin-bottom: 50px;
-}
-
-.filtr-list__item:not(:first-child) {
-  margin-left: 8px;
-}
-
-.filtr-list__btn {
-  padding-top: 6px;
-  padding-bottom: 6px;
-  padding-left: 22px;
-  padding-right: 22px;
-  font-family: inherit;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.63;
-  text-align: center;
-  color: #212121;
-  background-color: #f5f4fa;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.filtr-list__btn--active {
-  color: #ffffff;
-  background-color: #2196f3;
-}
-
-.filtr-list__btn:hover, .filtr-list__btn:focus {
-  color: #ffffff;
-  background-color: #2196f3;
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
-  border-radius: 4px;
-}
-
 .project-list {
   display: flex;
   flex-wrap: wrap;
@@ -365,6 +320,7 @@ body {
   font-size: 18px;
   line-height: 2;
   letter-spacing: 0.06em;
+  color: #212121;
 }
 
 .project-list__text {
@@ -456,5 +412,46 @@ body {
 
 .footer__newsletter {
   margin-left: auto;
+}
+
+/* фильтр */
+.portfolio__filtr {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 50px;
+}
+
+.portfolio__item:not(:first-child) {
+  margin-left: 8px;
+}
+
+.portfolio__btn {
+  padding-top: 6px;
+  padding-bottom: 6px;
+  padding-left: 22px;
+  padding-right: 22px;
+  font-family: inherit;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.63;
+  text-align: center;
+  color: #212121;
+  background-color: #f5f4fa;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.portfolio__btn--active {
+  color: #ffffff;
+  background-color: #2196f3;
+}
+
+.portfolio__btn:hover, .portfolio__btn:focus {
+  color: #ffffff;
+  background-color: #2196f3;
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+  border-radius: 4px;
 }
 /*# sourceMappingURL=portfolio.css.map */
