--- a/sass/components/list/_project-list.scss
+++ b/sass/components/list/_project-list.scss
@@ -64,12 +64,12 @@
 }
 
 .project-list__title {
-  @extend %title;
   margin-bottom: 4px;
   font-weight: 700;
   font-size: 18px;
   line-height: 2;
   letter-spacing: 0.06em;
+  color: $title-text-color;
 }
 
 .project-list__text {
