--- a/sass/main.scss
+++ b/sass/main.scss
@@ -17,6 +17,7 @@
 @import './components/modal/backdrop-modal';
 @import './components/form/order';
 @import './components/form/agreement';
+@import './components/list/project-list';
 
 @import './layout/header';
 @import './layout/footer';
@@ -25,3 +26,4 @@
 @import './layout/gallery';
 @import './layout/team';
 @import './layout/client';
+@import './layout/portfolio';
