--- a/css/main.css
+++ b/css/main.css
@@ -1,16 +1,16 @@
 @charset "UTF-8";
 /* общие свойства списков */
-.navigation__list, .address__list, .social-list, .card-list, .header__list, .advantage__list, .gallery__list, .client__list {
+.navigation__list, .address__list, .social-list, .card-list, .project-list, .header__list, .advantage__list, .gallery__list, .client__list, .portfolio__filtr {
   list-style: none;
 }
 
 /* Общие свойства для ссылок */
-.logo, .navigation__link, .address__link, .header__link {
+.logo, .navigation__link, .address__link, .project-list__link, .header__link {
   text-decoration: none;
 }
 
 /* Общие свойства изображений */
-.card-list__img, .gallery__img {
+.card-list__img, .project-list__img, .gallery__img {
   display: block;
   max-width: 100%;
   height: auto;
@@ -477,6 +477,80 @@ body {
   color: #2196f3;
 }
 
+.project-list {
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: -30px;
+  margin-left: -30px;
+}
+
+.project-list__item {
+  flex-basis: calc(100% / 3 - 30px);
+  margin-left: 30px;
+  margin-top: 30px;
+  border: 1px solid #eeeeee;
+  box-shadow: none;
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.project-list__item:hover, .project-list__item:focus-within {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+
+.project-list__link {
+  display: block;
+}
+
+.project-list__wrap {
+  position: relative;
+  overflow: hidden;
+}
+
+.project-list__wrap-text {
+  position: absolute;
+  left: 0;
+  top: 0;
+  transform: translateY(calc(100% + 1px));
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: calc(100% + 1px);
+  padding: 24px;
+  font-size: 18px;
+  line-height: 1.56;
+  color: #ffffff;
+  background-color: rgba(33, 150, 243, 0.9);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.project-list__item:hover .project-list__wrap-text,
+.project-list__item:focus-within .project-list__wrap-text {
+  transform: translateY(0);
+}
+
+.project-list__content {
+  padding-top: 20px;
+  padding-bottom: 20px;
+  padding-left: 24px;
+  padding-right: 24px;
+}
+
+.project-list__title {
+  margin-bottom: 4px;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 2;
+  letter-spacing: 0.06em;
+  color: #212121;
+}
+
+.project-list__text {
+  font-size: 16px;
+  line-height: 1.88;
+  color: #757575;
+}
+
 /* -------header CSS */
 .header {
   border-bottom: 1px solid #ececec;
@@ -715,5 +789,46 @@ body {
 
 .client__icon {
   --color3: currentColor;
+}
+
+/* фильтр */
+.portfolio__filtr {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 50px;
+}
+
+.portfolio__item:not(:first-child) {
+  margin-left: 8px;
+}
+
+.portfolio__btn {
+  padding-top: 6px;
+  padding-bottom: 6px;
+  padding-left: 22px;
+  padding-right: 22px;
+  font-family: inherit;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.63;
+  text-align: center;
+  color: #212121;
+  background-color: #f5f4fa;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.portfolio__btn--active {
+  color: #ffffff;
+  background-color: #2196f3;
+}
+
+.portfolio__btn:hover, .portfolio__btn:focus {
+  color: #ffffff;
+  background-color: #2196f3;
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+  border-radius: 4px;
 }
 /*# sourceMappingURL=main.css.map */
